2.14.10, 还原jdk8,移除不用字段